@@ -5,6 +5,8 @@
   ezcBaseInit.
 - Added the ezcConfigurationManager::reset() method that returns the 
   manager to its unintialized state.
+- Fixed issue #10110: Warnings in configuration tests with the posix extension
+  is not enabled.
 
 
 1.1 - Monday 18 December 2006
